--- a/app/src/main/res/layout/fragment_add_wish_list.xml
+++ b/app/src/main/res/layout/fragment_add_wish_list.xml
@@ -5,6 +5,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="323dp"
+        android:layout_height="66dp"
+        android:layout_weight="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.181"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.024"
+        tools:ignore="MissingConstraints" >
+
+    </FrameLayout>
+
     <EditText
         android:id="@+id/etName"
         android:layout_width="301dp"
