--- a/app/src/main/res/layout/view_gift.xml
+++ b/app/src/main/res/layout/view_gift.xml
@@ -17,34 +17,43 @@
         android:orientation="horizontal"
         android:background="#D8F8FF"
         android:padding="10dp">
-        <Space
-            android:layout_width="10dp"
-            android:layout_height="wrap_content" />
 
         <ImageView
-            android:id="@+id/logogift"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#EF1212"
-            android:padding="5dp" />
+            android:id="@+id/wishlistImage"
+            android:layout_width="101dp"
+            android:layout_height="72dp"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/ic_profile"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <Space
-            android:layout_width="75dp"
+            android:layout_width="25dp"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/nombre"
+            android:id="@+id/giftName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/nombreunico"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:padding="10sp"
-            android:layout_marginRight="30dp"/>
+            android:text="Texto"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.509" />
+
+        <Space
+            android:layout_width="35dp"
+            android:layout_height="wrap_content" />
 
 
         <Button
+            android:id="@+id/deleteGiftButton"
             android:layout_width="68dp"
             android:layout_height="wrap_content"
             android:background="@drawable/baseline_cancel_24" />
@@ -52,10 +61,14 @@
             android:layout_width="10dp"
             android:layout_height="wrap_content" />
         <CheckBox
+            android:id="@+id/checkBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scaleX="1.2"
-            android:scaleY="1.2"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
