--- a/app/src/main/res/layout/item_chat_left.xml
+++ b/app/src/main/res/layout/item_chat_left.xml
@@ -9,6 +9,7 @@
         android:id="@+id/leftMessageTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="15dp"
         android:background="@drawable/bubble_left"
         android:padding="8dp"
         android:textColor="#000000" />
