--- a/app/src/main/res/layout/item_chat_right.xml
+++ b/app/src/main/res/layout/item_chat_right.xml
@@ -9,6 +9,7 @@
         android:id="@+id/rightMessageTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="15dp"
         android:background="@drawable/bubble_right"
         android:padding="8dp"
         android:textColor="#000000" />
