--- a/app/src/main/res/layout/fragment_add_gift.xml
+++ b/app/src/main/res/layout/fragment_add_gift.xml
@@ -51,6 +51,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="280dp"
         android:text="Add Gift"
+        style="@style/DefaultButton"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
