--- a/app/src/main/res/layout/item_friend.xml
+++ b/app/src/main/res/layout/item_friend.xml
@@ -38,6 +38,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="Eliminar"
+        android:textSize="22sp"
+        style="@style/DefaultButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.836"
         app:layout_constraintStart_toEndOf="@+id/textViewFriendName"
