--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -36,7 +36,7 @@
             app:layout_constraintVertical_bias="0.155" />
 
         <Button
-            android:id="@+id/cancel_button"
+            android:id="@+id/cancelButton"
             style="@style/TransparentButton"
             android:layout_width="107dp"
             android:layout_height="51dp"
@@ -62,7 +62,7 @@
             app:layout_constraintVertical_bias="0.498" />
 
         <Button
-            android:id="@+id/search_button"
+            android:id="@+id/searchButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
